--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,3 +35,10 @@ jobs:
 
       # run tests!
       - run: npm test
+
+      - deploy:
+          name: semantic release
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              npm run semantic-release || true
+            fi
